navigation menu z-index fix and fancy css glow effects

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,5 +1,5 @@
 @value colors: './colors.css';
-@value lightblue, yellow, offwhite, white, darkgray from colors;
+@value lightblue, yellow, offwhite, white, darkgray, lightyellow, whiteblue from colors;
 
 body {
   margin: 0;
@@ -7,12 +7,22 @@ body {
   background-color: darkgray;
   font-family: 'Poppins', sans-serif;
   font-size: 1.1rem;
-}
 
-.App {
-  margin: 0;
-  padding: 0;
-  
+  h1, h2, h3, h4, h5, h6 {
+    font-family: 'Fira Code', serif;
+  }
+  h1 {
+    font-size: 2.6rem;
+    color: lightblue;
+  }
+  h2 {
+    font-size: 1.8rem;
+  }
+
+  p {
+    font-family: 'Proza Libre', sans-serif;
+  }
+
   a {
     text-decoration: none;
     color: lightblue;
@@ -28,21 +38,6 @@ body {
       color: yellow;
       cursor: pointer;
     }
-  }
-
-  h1, h2, h3, h4, h5, h6 {
-    font-family: 'Fira Code', serif;
-  }
-  h1 {
-    font-size: 2.6rem;
-    color: lightblue;
-}
-  h2 {
-    font-size: 1.8rem;
-  }
-
-  p {
-    font-family: 'Proza Libre', sans-serif;
   }
 
   .section {
